# checkpoint9

attach_shelf/src/: approach_service_server.cpp
my_components/: CMakeLists.txt  package.xml
my_components/include/my_components/: attach_client.hpp  attach_server.hpp  pre_approach.hpp
my_components/launch/: attach_to_shelf.launch.py
my_components/src/: attach_client.cpp  attach_server.cpp  pre_approach.cpp
